src/objects/zaapit__ZaapIT_Related_List_Tabs1__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ZaapIT Related List Tabs</description>
    <fields>
        <fullName>zaapit__tabLabelTranslation__c</fullName>
        <description>Use a label API name to translate the tabs, label value format: tab1 text#tab2 text#tab3 text...</description>
        <inlineHelpText>Use a label API name to translate the tabs, label value format: tab1 text#tab2 text#tab3 text...</inlineHelpText>
        <label>tabLabelTranslation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_name1__c</fullName>
        <label>vf_p_name1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_name2__c</fullName>
        <label>vf_p_name2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_name__c</fullName>
        <description>vf_p_name__c</description>
        <label>vf_p_name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_titles1__c</fullName>
        <label>vf_p_titles1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_titles2__c</fullName>
        <label>vf_p_titles2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__vf_p_titles__c</fullName>
        <description>vf_p_titles</description>
        <label>vf_p_titles</label>
        <type>TextArea</type>
    </fields>
    <label>ZaapIT Related List Tabs</label>
</CustomObject>